@@ -44,6 +44,10 @@ version 2.7.0 (??/??/????):
 	  with content (as opposed to a typing notification, etc).  (Thanks to
 	  rjoly for testing)
 
+	Yahoo:
+	* Attempt to better handle transparent proxies interfering with HTTP-based
+	  login.
+
 version 2.6.6 (02/18/2010):
 	libpurple:
 	* Fix 'make check' on OS X. (David Fang)
